--- a/website/templates/form.html
+++ b/website/templates/form.html
@@ -1,11 +1,18 @@
 <html>
 <head>
 <title>Go Analog</title>
+<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/style.css') }}">
+<script src="{{ url_for('static',filename='sorttable.js') }}"></script>
 </head>
 <body>
-<h1>Go Analog</h1>
-<a href="../">Back</a>
-
+<div class="topnav">
+  <a href="../">Home</a>
+  <a href= "{{ url_for('static',filename='about.html') }}">About</a>
+</div>
+<img class='logo' src="{{ url_for('static',filename='/GoAnalog.png')}}">
+<h1>games unplugged</h1>
+<br><div style="overflow-x:auto">
 {{ output|safe }}
+</div>
 </body>
 </html>
